# EigenTutorial

./: README.md
Curvefitting/: CMakeLists.txt  CurveFitting.cpp  edge.cpp  edge.h  eigen_types.h  loss_function.cpp  loss_function.h  problem.cpp  problem.h  vertex.cpp  vertex.h
eigenVector/: CMakeLists.txt  eigenVector.cpp
useEigen/: CMakeLists.txt  curvefitting.cpp  eigenMatrix.cpp
